--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.83.0",
+    "@turbodocx/html-to-docx": "^1.20.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,8 +51,9 @@
     "embla-carousel-react": "^8.6.0",
     "firebase-admin": "^13.6.0",
     "html-to-pdfmake": "^2.5.32",
-    "html2pdf.js": "^0.12.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.462.0",
     "mammoth": "^1.11.0",
     "next-themes": "^0.3.0",
